tests/baselines/reference/decoratorOnClassMethod11.errors.txt
decoratorOnClassMethod11.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
decoratorOnClassMethod11.ts(5,11): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== decoratorOnClassMethod11.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class C {
            decorator(target: Object, key: string): void { }
    
            @(this.decorator)
              ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
            method() { }
        }
    }